// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Input Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<div>
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef
    disabled={false}
    hasError={true}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <Text
    hasError={true}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="help"
  >
    <Warning
      color="grayDark"
      size="small"
    />
     jest-auto-snapshots String Fixture
  </Text>
</div>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when boolean prop "hasError" is set to: "false" 1`] = `
<div>
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef
    disabled={true}
    hasError={false}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="help"
  >
    jest-auto-snapshots String Fixture
  </Text>
</div>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when passed all props 1`] = `
<div>
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef
    disabled={true}
    hasError={true}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <Text
    hasError={true}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="help"
  >
    <Warning
      color="grayDark"
      size="small"
    />
     jest-auto-snapshots String Fixture
  </Text>
</div>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when passed only required props 1`] = `
<div>
  <ForwardRef
    disabled={false}
    hasError={false}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder=""
    size="regular"
    type="text"
  />
</div>
`;
